--- a/webpack-demo/client/template.html
+++ b/webpack-demo/client/template.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"><app></app></div>
+    <div id="root"><!-- app --></div>
 </body>
 </html>
